Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 0.7
-
None
-
None
Description
#5 0x00007f90b341d3ee in signalHandler(int, siginfo*, void*) () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so #6 <signal handler called> #7 0x0000000000000003 in ?? () at src/base/logging.h:201 #8 0x0000000000bc67f4 in impala::RuntimeProfile::ComputeTimeInProfile ( this=0x14f91e40, total=4105867450) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/util/runtime-profile.cc:222 #9 0x0000000000bc678f in impala::RuntimeProfile::ComputeTimeInProfile ( this=0x14f91e40) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/util/runtime-profile.cc:213 #10 0x0000000000c04140 in impala::Coordinator::ReportQuerySummary ( ---Type <return> to continue, or q <return> to quit--- this=0x2df59800) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:1068 #11 0x0000000000c01ce1 in impala::Coordinator::CancelInternal (this=0x2df59800) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:840 #12 0x0000000000c01aa3 in impala::Coordinator::Cancel (this=0x2df59800) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:827 #13 0x0000000000a6fc90 in impala::ImpalaServer::QueryExecState::Cancel ( this=0x19044400) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/service/impala-server.cc:304 #14 0x0000000000a831ad in impala::ImpalaServer::CancelInternal ( this=0x5190000, query_id=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/service/impala-server.cc:1422 #15 0x0000000000b088ed in impala::ImpalaServer::Cancel (this=0x5190000, tstatus=..., query_handle=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/service/impala-beeswax-server.cc:401 ---Type <return> to continue, or q <return> to quit--- #16 0x0000000000cbf03f in impala::ImpalaServiceProcessor::process_Cancel ( this=0x3d334a0, seqid=0, iprot=0x75c9500, oprot=0x75c97c0, callContext=0x7fa1bc0) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/generated-sources/gen-cpp/ImpalaService.cpp:1172 #17 0x0000000000cbedec in impala::ImpalaServiceProcessor::dispatchCall ( this=0x3d334a0, iprot=0x75c9500, oprot=0x75c97c0, fname="Cancel", seqid=0, callContext=0x7fa1bc0) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/generated-sources/gen-cpp/ImpalaService.cpp:1145
Core files available on:
c2138.hal.cloudera.com:/data/1/workspace/coredumps/impala-176