IMPALA-176 ComputeTimeInProfile should lock children_lock_